//===----------------------------------------------------------------------===//
//
// This source file is part of the Swift Distributed Actors open source project
//
// Copyright (c) 2018 Apple Inc. and the Swift Distributed Actors project authors
// Licensed under Apache License v2.0
//
// See LICENSE.txt for license information
// See CONTRIBUTORS.md for the list of Swift Distributed Actors project authors
//
// SPDX-License-Identifier: Apache-2.0
//
//===----------------------------------------------------------------------===//

syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "Proto";

message Handshake {
    ProtocolVersion version = 1;
    UniqueAddress from = 2;
    UniqueAddress to = 3;
    // In the future we may want to add additional information
    // about certain capabilities here. E.g. when a node supports
    // faster transport like InfiniBand and the likes, so we can
    // upgrade the connection in case both nodes support the fast
    // transport.
}

message Envelope {
    uint32 serializer = 1;
    string recipient = 2;
    bytes payload = 3;
}

// System messages have to be reliable, therefore they need to be acknowledged
// by the receiving node.
message SystemEnvelope {
    uint32 serializer = 1;
    uint64 sequenceNr = 2;
    UniqueAddress from = 3;
    bytes payload = 4;
}

message SystemAck {
    uint64 sequenceNr = 1;
    UniqueAddress from = 2;
}

message Address {
    string protocol = 1;
    string system = 2;
    string hostname = 3;
    uint32 port = 4;
}

message UniqueAddress {
    Address address = 1;
    uint32 uid = 2;
}

// The version is represented as 4 bytes:
// - reserved: Can be used in the future for additional flags
// - major
// - minor
// - patch
// Because protobuf does not support values with less than 4 bytes, we
// encode all values in a single uint32 and provide an extension to
// retrieve the specific values.
message ProtocolVersion {
    uint32 value = 1;
}
